# NomadEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitattribute  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ResourceManager.h  SandboxEngine.vcxproj  SandboxEngine.vcxproj.filters  imgui.ini
.github/workflows/: build-and-test.yml  code-lint.yml  package-and-release.yml  windows-mingw-build.yml
Scripts/: check_include_guards.py  generate_vs_project.bat  generate_vs_project.ps1
Sources/Editor/: Application.cpp  Application.h  EditorWindow.cpp  EditorWindow.h  EditorWindowBase.cpp  EditorWindowBase.h  Main.cpp  SingletonBase.h  SingletonBase.inl
Sources/Editor/Common/: Define.h  Types.h
Sources/Editor/Platform/: IPlatform.h  IPlatformWindow.h  Platform_Windows.cpp  Platform_Windows.h  SDLWindow.cpp  SDLWindow.h  WinAPIWindow.cpp  WinAPIWindow.h
Sources/Editor/Views/: EditorWindow_Main.cpp  EditorWindow_Main.h  IEditorWindow.h
Sources/Editor/Views/Panels/: EditorPanelBase.cpp  EditorPanelBase.h  HierarchyPanel.cpp  HierarchyPanel.h  IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
Sources/Runtime/: Main.cpp  RuntimeManager.cpp  RuntimeManager.h  SandboxMain.cpp
Sources/Runtime/Application/: Application.cpp  Application.h  ApplicationPCH.cpp  ApplicationPCH.h  WindowContextBase.h
Sources/Runtime/Application/Backends/: IRenderBackend.h  IRenderingServer.h  RenderBackendBase.h  RenderBackendContext.h  RenderBackend_GL.cpp  RenderBackend_GL.h  RenderBackend_SDLRenderer.cpp  RenderBackend_SDLRenderer.h  RenderingServer_GDI.cpp  RenderingServer_GDI.h  RenderingServer_SDLRenderer.cpp  RenderingServer_SDLRenderer.h
Sources/Runtime/Application/Platform/: IPlatformWindow.h  MessageDispatcher.h  MessageDispatcher.inl  MessageHandlerBase.h  MessageHandlerHelpers.h  PlatformData.h  PlatformWindowBase.cpp  PlatformWindowBase.h  PlatformWindowContext.h  PlatformWindowEvent.h  PlatformWindowEvent.inl  PlatformWindow_SDL.cpp  PlatformWindow_SDL.h  PlatformWindow_SDL3.cpp  PlatformWindow_SDL3.h  PlatformWindow_Win32.cpp  PlatformWindow_Win32.h
Sources/Runtime/Common/: Defines.h  Logger.cpp  Logger.h  SandboxConfig.h  SandboxHeader.cpp  SandboxHeader.h  SandboxTypes.h  Types.h
Sources/Runtime/Common/Templates/: SingletonBase.h
Sources/Runtime/Common/Utilities/Math/: Color.h
Sources/Runtime/Components/: ObjectBase.h
Sources/Runtime/Display/: DisplayPCH.h  DisplayServerDescriptor.h  DisplayServer_Windows.cpp  DisplayServer_Windows.h  IDisplayServer.h
Sources/Runtime/Events/: TODO.txt
Sources/Runtime/Platform/: RendererContextBase.cpp  RendererContextBase.h  WindowContextBase.cpp  WindowContextBase.h
Sources/Runtime/Rendering/: IRenderingServer.h  RenderingServerDescriptor.h  RenderingServer_DX12.cpp  RenderingServer_DX12.h  RenderingServer_GL.cpp  RenderingServer_GL.h
Sources/Runtime/Resources/: ResourceBase.cpp  ResourceBase.h  ResourceManager.cpp  ResourceManager.h  Texture.h
Sources/Runtime/Utilities/: SingletonBase.h  SingletonBase.inl
Sources/Runtime/Utilities/Math/: Vector2D.h
